# UAO-Asistente-SOAP

./: .coverage  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  Dockerfile  FAST_SOAP_Dataset_Validacion_Clinica.json  LICENSE  Makefile  README.md  app.py  app_styles.py  backlog.md  main.py  plantilla_readme.md  pyproject.toml  quickstart.md  skills-lock.json  test_e2e.py
.github/workflows/: sync-to-gitlab.yml
.specify/memory/: constitution.md
mockups/: fastsoapia_pantalla1_inicio.html  fastsoapia_pantalla2_procesando.html  fastsoapia_pantalla3_resultado.html
services/: __init__.py  audio_utils.py  db_manager.py  pdf_exporter.py  pdf_generator.py  prompt_builder.py  soap_generator.py  text_diff.py  transcriber.py
services/persistence/: __init__.py  config.py  interfaces.py  repository.py  schemas.py  service.py
services/providers/: __init__.py  base.py  groq_provider.py  openrouter_transcription.py  registry.py
services/ui/: __init__.py  branding.py  components.py  theme.py
specs/002-environment-setup/: spec.md
specs/003-fix-model-env-read/: spec.md  tasks.md
tests/: __init__.py  conftest.py  test_audio_utils.py  test_soap_generator.py  test_text_diff.py  test_transcriber.py
tests/providers/: __init__.py  mock_provider.py  mock_transcription.py  test_base.py  test_groq_provider.py  test_openrouter_transcription.py  test_registry.py
tests/test_persistence/: __init__.py  conftest.py  test_config.py  test_persistence_service.py  test_repository.py  test_service.py
tests/ui/: __init__.py  test_app_layout.py
(+16 files in other folders)
