[project]
name = "uao-asistentesoap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fpdf2>=2.8.7",
    "groq>=1.4.0",
    "openai>=2.38.0",
    "python-dotenv>=1.2.2",
    "requests>=2.31.0",
    "streamlit>=1.58.0",
]
