[project]
name = "uao-asistentesoap"
version = "0.1.0"
description = "Asistente de Evoluciones Clinicas SOAP para UCI y hospitalizacion"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fpdf2>=2.8.7",
    "groq>=1.4.0",
    "openai>=2.38.0",
    "python-dotenv>=1.2.2",
    "requests>=2.31.0",
    "streamlit>=1.58.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "PL", "D"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "ARG001", "ARG002", "PLR2004"]
"__init__.py" = ["D"]
"app.py" = ["D"]


[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_unimported = false
exclude = ["app.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=services --cov=app --cov-report=term-missing"
python_files = ["test_*.py"]
pythonpath = ["."]
